# l5r-character-manager-3

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CLAUDE.md  INSTALL.txt  README.md  README.txt  TODO.txt  android_main.py  appveyor.yml  changelog.txt  cxfreeze.py  frontend_review.md  l5rcm.pro  l5rcm.py  main.py  makepack.bat  makepack.sh  pylint.rc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/skills/port-tab-to-qml/: SKILL.md
.claude/skills/translate-ts/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: android.yml  ci.yml  codeql-analysis.yml  codeql.yml  python-app.yml  release.yml
autoupdate/: core.py
branches/3.9.x-maintenance/: AUTHORS  changelog.txt  dal_check.py  go_gpl.py  l5rcm.bat  l5rcm.py  last_version  pylint.bat  pylint.rc  setup.py
branches/3.9.x-maintenance/autoupdate/: __init__.py
branches/3.9.x-maintenance/dal/: clan.py  db2xml2.py  perk.py  powers.py  requirements.py  school.py  skill.py  spell.py  xmlutils.py
branches/3.9.x-maintenance/data_packs/: beautify.bat
branches/3.9.x-maintenance/dialogs/: __init__.py  customitems.py  itemseldlg.py  managedatapack.py  modifiersdlg.py  newrankdlg.py  perkseldlg.py  spelldlg.py
branches/3.9.x-maintenance/diceroller/: __init__.py  drgui.py
branches/3.9.x-maintenance/exporters/: TODO.txt  fdfexporter.py  textexporter.py
branches/3.9.x-maintenance/i18n/: en_US.ts  it_IT.ts
branches/3.9.x-maintenance/l5rcmcore/: __init__.py
branches/3.9.x-maintenance/linux/: copyright  deploy.sh  exclude_from_tarball  l5rcm  l5rcm.desktop  l5rcm.rst  makedeb.sh  makesrcdir.sh
branches/3.9.x-maintenance/models/: __init__.py  advances.py  charsnapshot.py  maviewmodel.py  modifiers.py  outfit.py  perkviewmodel.py  skillmodel.py  sortproxymodel.py  spellmodel.py
branches/3.9.x-maintenance/sinks/: sink_2.py  sink_3.py  sink_4.py
branches/3.9.x-maintenance/templates/: index.thtml
dal/: dataimport.py  family.py  generic.py  report.py  requirements.py  weapon.py
data_packs/book_of_air_pack/: manifest
data_packs/core_pack/: manifest
data_packs/great_clan_pack/: manifest
data_packs/lbs_pack/: manifest
data_packs/strongholds_pack/: manifest
dialogs/: advdlg.py  katadlg.py  kihodlg.py
diceroller/: drcore.py
docs/: DATAPACK_FORMAT.md  FILE_FORMAT_L5R.md  L5R_UI_Design_System.md  QR_IMPORT_FORMAT.md
exporters/: __init__.py  fdfexporter.py  template.txt
l5r/: l5rcm.bat  l5rcm.pro  main.py  setup.py
l5r/api/: __init__.py  context.py  signals.py
l5r/autoupdate/: __init__.py  core.py
l5r/dialogs/: __init__.py  advdlg.py  customitems.py  itemseldlg.py  katadlg.py  kihodlg.py  managedatapack.py  modifiersdlg.py  newrankdlg.py  npcexport.py  perkseldlg.py  settings.py  spelldlg.py
l5r/diceroller/: __init__.py  drcore.py  drgui.py
l5r/exporters/: __init__.py  fdfexporter.py  model_form.py  npc.py  qr_transfer.py  sheet.py
l5r/i18n/: ar.ts  en.ts  en_GB.ts  en_US.ts  es_ES.ts  fr.ts  fr_FR.ts  it_IT.ts  pt_BR.ts  ru_RU.ts  untranslated.ts  vi.ts
l5r/l5rcmcore/: __init__.py  qtsignalsutils.py
l5r/models/: __init__.py  advances.py  charsnapshot.py  chmodel.py  katamodel.py  kihomodel.py  maviewmodel.py  modifiers.py  outfit.py  perkviewmodel.py  skillmodel.py  sortproxymodel.py  spellmodel.py  techviewmodel.py
l5r/qmlui/: __init__.py  app.py
l5r/sinks/: __init__.py  sink_1.py  sink_2.py  sink_3.py  sink_4.py
l5r/tests/: __init__.py  fakedata.py  npcexport_test.py
l5r/ui/: advance.py  advise.py  health.py  helpers.py  item_description.py  menu.py  nicebar.py  persistence.py  refresh.py
l5r/util/: __init__.py  datapack_catalog.py  fsutil.py  log.py  names.py  osutil.py  section_visibility.py  session.py  settings.py  worker.py
l5r/widgets/: __init__.py  cknumwidget.py  cost_selection.py  familychooser.py  fileedit.py  iconloader.py  moneywidget.py  requirementwidget.py  schoolchooser.py  settings.py  simpledescr.py  simplericheditor.py  spell_item_selection.py  toolbar_rc.py  verticaltoolbar.py
l5rcmcore/: __init__.py
misc/: last_version
models/: chmodel.py  katamodel.py  kihomodel.py  techviewmodel.py
rules/: __init__.py
share/l5rcm/: female.txt  l5rdb.sqlite.dump
sinks/: __init__.py  sink_1.py  sink_4.py
src/: l5rcm.icns  l5rcm.pro  l5rcm.py  setup.py
src/api/: __init__.py
src/autoupdate/: __init__.py  core.py
src/dal/: __init__.py  clan.py  db2xml2.py  family.py  generic.py  perk.py  powers.py  query.py  requirements.py  school.py  spell.py  xmlutils.py
src/dialogs/: __init__.py  advdlg.py  customitems.py  itemseldlg.py  katadlg.py  kihodlg.py  managedatapack.py  modifiersdlg.py  newrankdlg.py  npcexport.py  perkseldlg.py  rankadvdlg.py  spelldlg.py
src/diceroller/: __init__.py  drcore.py  drgui.py
src/exporters/: TODO.txt  __init__.py  fdfexporter.py  npc.py  template.txt  textexporter.py
src/i18n/: en_GB.ts  en_US.ts  es_ES.ts  fr_FR.ts  pt_BR.ts  ru_RU.ts
src/l5rcmcore/: __init__.py  qtsignalsutils.py
src/models/: __init__.py  advances.py  charsnapshot.py  chmodel.py  katamodel.py  kihomodel.py  maviewmodel.py  modifiers.py  outfit.py  perkviewmodel.py  skillmodel.py  sortproxymodel.py  spellmodel.py  techviewmodel.py
src/osutil/: __init__.py
src/rules/: __init__.py
src/sinks/: __init__.py  sink_1.py  sink_2.py  sink_3.py  sink_4.py
src/tests/: npcexport_test.py
src/tools/: pdftk
src/util/: log.py
src/widgets/: __init__.py  cknumwidget.py  cost_selection.py  familychooser.py  fileedit.py  iconloader.py  moneywidget.py  requirementwidget.py  schoolchooser.py  searchbox.py  simpledescr.py  simplericheditor.py  spell_item_selection.py  toolbar.qrc  toolbar_rc.py  verticaltoolbar.py
tools/: finalize_courtier_sheet.py  qml_preview.ps1  qml_preview.py
tools/pdftk/: readme.txt
tools/scripts/: apply_ts_translations.py  bookinfo2.py  dal_check.py  go_gpl.py  make_all_packs.py  makepack.bat  pylint.bat  pylint.rc  update_translations.py
widgets/: cknumwidget.py  iconloader.py  requirementwidget.py  simpledescr.py  simplericheditor.py  spell_item_selection.py
windows/: deploy.bat  setup.nsi
(+430 files in other folders)
