[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "l5rcm"
description = "L5R RPG character manager"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPLv3"}
authors = [
    {name = "Daniele Simonetti", email = "oppifjellet@gmail.com"},
]
keywords = ["l5r", "rpg", "legend-of-the-five-rings", "character-manager"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lxml >= 6.1",
    "asq >= 2.0",
    "qtpy >= 2.4",
    "PyQt6 >= 6.7",
    "pyqtwaitingspinner >= 1.3",
    "darkdetect >= 0.8.0",
    "pypdf @ git+https://github.com/OpenNingia/pypdf.git@fix_escape",
    "l5rdal @ git+https://github.com/OpenNingia/l5rcm-data-access.git@v1.4.2",
]
dynamic = ["version"]

[project.optional-dependencies]
# Mobile (Android) build: QML UI only, via PySide6 (the only Qt-for-Python
# binding that targets Android -- PyQt6 ships no Android wheels). This set is
# deliberately pure-Python so it cross-compiles under python-for-android:
# lxml is dropped (l5rdal >= v1.4.2 is stdlib-xml only), and the desktop-only
# PyQt6 / pyqtwaitingspinner / darkdetect are excluded. Entry point is
# android_main.py, which never imports the legacy QWidget UI.
android = [
    "asq >= 2.0",
    "qtpy >= 2.4",
    "PySide6 >= 6.7",
    "pypdf @ git+https://github.com/OpenNingia/pypdf.git@fix_escape",
    "l5rdal @ git+https://github.com/OpenNingia/l5rcm-data-access.git@v1.4.2",
]

[project.urls]
Homepage = "https://github.com/OpenNingia/l5r-character-manager-3"
Issues = "https://github.com/OpenNingia/l5r-character-manager-3/issues"

[project.scripts]
l5rcm = "l5r.main:main"

[project.gui-scripts]
l5rcm-gui = "l5r.main:main"

[tool.setuptools.dynamic]
# Single source of truth for the version. tools/deploy/linux/makedeb.sh
# also greps APP_VERSION out of the same file.
version = {attr = "l5r.l5rcmcore.APP_VERSION"}

[tool.setuptools.packages.find]
include = ["l5r*"]
exclude = ["l5r.tests*", "l5r.api.tests*", "l5r.models.tests*"]

[tool.setuptools.package-data]
# Wildcard key applies to every discovered package. We can't list the icon
# packages explicitly (e.g. "l5r.share.icons.l5rcm.16x16") because their
# segments start with digits and fail setuptools' module-name validation.
"*" = ["*.pdf", "*.txt", "*.png", "*.qm", "*.qml", "*.ttf", "*.otf"]

[tool.cxfreeze]
executables = [
    {script = "main.py", base = "gui", icon = "tools/deploy/windows/l5rcm.ico", target_name = "l5rcm"}
]

[tool.cxfreeze.build_exe]
excludes = ["tests", "unittest"]
includes = ["l5r.widgets.iconloader", "l5r.widgets.toolbar_rc"]
zip_include_packages = ["encodings", "PyQt6", "lxml._elementpath"]
